# FluentCoder

./: .coderabbit.yaml  .gitignore  AGENTS.md  CLAUDE.md  README.md  index.html  package-lock.json  package.json  test-scheme.mjs  test-uri.js  tsconfig.json  vite.config.ts
.github/: PULL_REQUEST_TEMPLATE.md
.github/workflows/: release.yml
docs/: razor-brick6-frontend.md
docs/adr/: 0001-cshtml-language-service.md  0002-cshtml-projection-roslyn.md  0003-monaco-languageclient-v10.md  0004-call-type-hierarchy.md  0005-blazor-razor-projection.md
docs/context/: agentes-ia.md  command-palette.md  cshtml-language-service.md  editor.md
docs/design/: fluent-accessibility-checklist.md  fluent-design.md
docs/migration/: monaco-v10-audit.md  v10-rollback.md  v10-validation-csharp.md  v10-validation-cshtml.md  v10-validation-non-roslyn.md
docs/roadmap/: csharp-ide-parity.md  csharp-razor-parity-audit.md  cshtml-language-service.md  fluent-workspaces.md
milestones/: EPIC-explorer-advanced-actions.md  EPIC-explorer-context-menu.md  EPIC-file-explorer-actions.md  EPIC-fluent-vscode-layout.md  EPIC-icon-pack-monaco.md  EPIC-lsp-intellisense-csharp.md  EPIC-lsp-razor-cshtml.md  EPIC-lsp-typescript-javascript.md  EPIC-menu-bar-vscode.md  EPIC-quick-open-file-search.md  EPIC-unsaved-changes-guard.md  README.md
milestones/issues/: ISSUE-01-app-shell-layout.md  ISSUE-02-activity-bar.md  ISSUE-03-breadcrumbs.md  ISSUE-04-status-bar.md  ISSUE-05-terminal-backend-pty.md  ISSUE-06-terminal-frontend-xterm.md  ISSUE-07-fluent-polish.md  ISSUE-08-integration-build.md  ISSUE-15-file-index-backend.md  ISSUE-16-fuzzy-matcher.md  ISSUE-17-quick-open-palette-ui.md  ISSUE-18-quick-open-integration.md  ISSUE-19-lsp-spike-monaco-languageclient.md  ISSUE-20-lsp-process-stdio-codec.md  ISSUE-21-lsp-websocket-bridge.md  ISSUE-22-lsp-state-commands.md  ISSUE-23-lsp-frontend-transport-client.md  ISSUE-24-lsp-diagnostics-to-problems.md  ISSUE-25-lsp-workspace-lifecycle.md  ISSUE-26-csharp-roslyn-download.md  ISSUE-27-csharp-client-config.md  ISSUE-28-lsp-server-status-ux.md  ISSUE-29-razor-language-registration.md  ISSUE-30-razor-server-acquisition.md  ISSUE-31-razor-client-config.md  ISSUE-32-razor-capability-spike.md  ISSUE-33-ts-disable-builtin-worker.md  ISSUE-34-ts-language-server-launch.md  ISSUE-35-ts-client-config.md  ISSUE-36-tsx-jsx-language-ids.md  ISSUE-37-ts-end-to-end-validation.md  ISSUE-38-material-resolver-layer.md  ISSUE-39-codicon-central-map.md  ISSUE-40-wire-components-icons.md  ISSUE-41-icon-pack-perf-docs-e2e.md  ISSUE-42-explorer-new-file.md  ISSUE-43-explorer-new-folder.md  ISSUE-44-explorer-refresh.md  ISSUE-45-explorer-collapse-folders.md  ISSUE-46-explorer-actions-integration.md  (+25 more)
scripts/: setup-fast-linker.ps1  setup-fast-linker.sh
src/: App.tsx  api.ts  editorGroups.test.ts  editorGroups.ts  language.test.ts  language.ts  main.tsx  monaco-loader.ts  navigationHistory.test.ts  navigationHistory.ts  paths.test.ts  paths.ts  recentFolders.ts  styles.css  styles.test.ts  tabOrder.test.ts  tabOrder.ts  types.ts  uiScale.test.ts  uiScale.ts  vite-env.d.ts
src-tauri/: Cargo.toml  build.rs  deny.toml  tauri.conf.json
src-tauri/.cargo/: config.toml  config.toml.example
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: agents.rs  child_process.rs  dotnet_tools.rs  efcore.rs  file_index.rs  fs_commands.rs  git.rs  graph.rs  lib.rs  main.rs  mcp.rs  package_intel.rs  runner.rs  search.rs  session.rs  sln.rs  snap.rs  ssh.rs  terminal.rs  testrunner.rs  text_io.rs  walk.rs  window.rs  workspace_open.rs
src-tauri/src/agents/: claude.rs  codex.rs  mod.rs
src-tauri/src/cshtml/: ast.rs  binding.rs  document.rs  engine.rs  hardening.rs  harness.rs  intellisense.rs  lint.rs  metadata.rs  mod.rs  parser.rs  projection.rs  semantics.rs  types.rs  views.rs  workspace.rs
src-tauri/src/cshtml/corpus/golden/: stray_close_tag.expected.json  valid_directives.expected.json
src-tauri/src/cshtml/corpus/invalid/: bad_directive.cshtml  stray_close_tag.cshtml  unclosed_block.cshtml  unclosed_comment.cshtml
src-tauri/src/cshtml/corpus/partial/: mid_expression.cshtml  mid_tag.cshtml
src-tauri/src/cshtml/corpus/valid/: _ViewImports.cshtml  comments.cshtml  control_flow.cshtml  directives.cshtml  expressions.cshtml  section_layout.cshtml  strings_generics.cshtml  unicode.cshtml
src-tauri/src/dap/: bridge.rs  mod.rs  netcoredbg.rs
src-tauri/src/lsp/: bridge.rs  build.rs  codec.rs  csharp.rs  fluent_cshtml.rs  mod.rs  npm_server.rs  process.rs  razor.rs  system_server.rs  typescript.rs
src-tauri/src/razor/: broker.rs  commands.rs  derive.rs  diag.rs  exec.rs  mod.rs  projection_gen.rs  remap.rs  runtime.rs  shadow.rs  sidecar.rs  sourcemap.rs
src-tauri/src/razor/test_fixtures/: Index_cshtml.g.cs
src/agents/: codeHighlight.test.ts  codeHighlight.ts  fileRef.test.ts  fileRef.ts  inlineCode.test.ts  inlineCode.ts  store.test.ts  store.ts  types.ts
src/components/: AboutDialog.tsx  ActivityBar.tsx  AgentSidebar.tsx  AgentWorkspace.tsx  AgentsPanel.tsx  BacklinksPanel.tsx  BranchPicker.tsx  Breadcrumbs.tsx  CommandPalette.tsx  ConfirmDialog.tsx  DetachedEditor.tsx  EditorGrid.tsx  EditorGroupView.tsx  EditorPane.tsx  ExplorerInlineCreation.tsx  ExplorerInlineRename.tsx  FileExplorer.tsx  GitPanel.tsx  GitStatusItem.tsx  GraphView.tsx  ImagePreview.tsx  MediaPreview.tsx  MenuBar.tsx  NugetManager.tsx  OutputPanel.tsx  PackagesPanel.tsx  PlaceholderPanel.tsx  ProblemsPanel.tsx  QuickInput.tsx  QuickOpen.tsx  QuickPick.tsx  RemoteConnectionMenu.tsx  RemoteFolderBrowser.tsx  RunPanel.tsx  SearchPanel.tsx  SolutionPanel.tsx  SshConnectDialog.tsx  StatusBar.tsx  SymbolSearch.tsx  TabBar.tsx  (+11 more)
src/dap/: breakpointStore.test.ts  breakpointStore.ts  client.ts  debugSession.ts  debugSessionRegistry.test.ts  debugSessionRegistry.ts  launchSettings.test.ts  launchSettings.ts  loadLaunchProfiles.ts
src/detach/: dropTarget.ts  editorWindow.ts
src/efcore/: migrations.test.ts  migrations.ts
src/explorer/: OpenWithPicker.tsx  advancedFileMenu.test.ts  openWith.ts  (+2 more)
(+244 files in other folders)
