[package]
name = "fluent-coder"
version = "0.1.0"
description = "Fluent Coder — a VSCode-like code editor built with Tauri"
authors = ["Vagner Araújo <gnerprocs@gmail.com>"]
edition = "2021"
license = "GPL-3.0-only"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
# The `_lib` suffix may seem redundant but it is necessary
# to make the lib name unique and wouldn't conflict with the bin name.
# This seems to be only an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519
name = "fluent_coder_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

# Standalone LSP server for .cshtml files — spawned by the Tauri host as a child
# process and communicated with via stdio (LSP Content-Length framing).
# Intentionally free of Tauri, Monaco and Roslyn.
[[bin]]
name = "fluent-cshtml-lsp"
path = "src/bin/fluent_cshtml_lsp.rs"

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-dialog = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
portable-pty = "0.9"
# Move files/folders to the OS recycle bin (recoverable delete in the explorer).
trash = "5"
# Workspace search: ripgrep-compatible walking and incremental file scanning.
ignore = "0.4"
grep-regex = "0.1"
grep-searcher = "0.1"
# `Matcher` trait — used to locate match column ranges within a line for highlight.
grep-matcher = "0.1"
regex = "1"

# --- LSP module (src/lsp) ---
# Async runtime + WS bridge between the frontend monaco-languageclient and the
# stdio language-server processes. Scoped to the `lsp` module.
tokio = { version = "1", features = ["rt-multi-thread", "macros", "process", "io-util", "net", "sync", "time"] }
tokio-tungstenite = "0.24"
futures-util = "0.3"
uuid = { version = "1", features = ["v4"] }
# Roslyn/rzls acquisition (download + verify + extract).
# `gzip`: the VS Marketplace `vspackage` endpoint serves the C# extension VSIX
# with `Content-Encoding: gzip` (verified). Without this feature reqwest returns
# the raw gzip bytes, the .vsix fails to parse as a ZIP, and Razor cohosting
# silently falls back to standalone Roslyn (no Razor). nuget.org serves the
# Roslyn .nupkg uncompressed, so that path is unaffected.
reqwest = { version = "0.12", default-features = false, features = ["rustls-tls", "gzip"] }
zip = { version = "2", default-features = false, features = ["deflate"] }
sha2 = "0.10"
# Locate node / typescript-language-server / npm on PATH.
which = "6"
# Official Agent Client Protocol SDK. The editor acts as the ACP client and
# spawns the registered Codex/Claude adapters over JSON-RPC stdio.
agent-client-protocol = "0.15"

[profile.release]
panic = "abort"
codegen-units = 1
lto = true
opt-level = "s"
strip = true
