[package]
name = "fluent-coder"
version = "0.1.0"
description = "Fluent Coder — a VSCode-like code editor built with Tauri"
authors = ["Vagner Araújo <gnerprocs@gmail.com>"]
edition = "2021"
license = "GPL-3.0-only"
default-run = "fluent-coder"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
# The `_lib` suffix may seem redundant but it is necessary
# to make the lib name unique and wouldn't conflict with the bin name.
# This seems to be only an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519
name = "fluent_coder_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
# `image-png` lets us decode the bundled PNG at runtime to set a crisp,
# high-resolution window/taskbar icon (see the `setup` hook in lib.rs).
# `macos-private-api` habilita janelas transparentes/com efeitos no macOS
# (o método `.transparent()` do WebviewWindowBuilder só existe com ela no target
# macOS — sem isso a build do macOS falha com E0599). No Windows/Linux é no-op.
# Atenção: apps com esta feature não podem ser publicados na Mac App Store.
tauri = { version = "2", features = ["image-png", "macos-private-api"] }
tauri-plugin-dialog = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
portable-pty = "0.9"
# Move files/folders to the OS recycle bin (recoverable delete in the explorer).
trash = "5"
# Workspace search: ripgrep-compatible walking and incremental file scanning.
ignore = "0.4"
# Glob matching for the explorer's `files.exclude` (VS Code-style `**/bin` etc).
# Already in the lock as a transitive dep of `ignore`, so no new download.
globset = "0.4"
# Base64 for the Razor live sidecar's `TargetPath` AdditionalFiles metadata.
# Already in the lock (transitive), so no new download.
base64 = "0.21"
grep-regex = "0.1"
grep-searcher = "0.1"
# `Matcher` trait — used to locate match column ranges within a line for highlight.
grep-matcher = "0.1"
regex = "1"
# Text encoding detection + transcoding so we open/save files like VS Code:
# `encoding_rs` is the WHATWG-standard codec set (UTF-8/16, Windows-1252,
# Latin-1, …); `chardetng` is Firefox's charset detector for legacy 8-bit files
# with no BOM. Together they handle BOM stripping, UTF-16, and the
# Latin-1/Windows-1252 heuristic the decompiled-metadata files trip on.
encoding_rs = "0.8"
chardetng = "0.1"

# --- LSP module (src/lsp) ---
# Async runtime + WS bridge between the frontend monaco-languageclient and the
# stdio language-server processes. Scoped to the `lsp` module.
tokio = { version = "1", features = ["rt-multi-thread", "macros", "process", "io-util", "net", "sync", "time"] }
tokio-tungstenite = "0.24"
futures-util = "0.3"
uuid = { version = "1", features = ["v4"] }
# Roslyn/rzls acquisition (download + verify + extract).
# `gzip`: the VS Marketplace `vspackage` endpoint serves the C# extension VSIX
# with `Content-Encoding: gzip` (verified). Without this feature reqwest returns
# the raw gzip bytes, the .vsix fails to parse as a ZIP, and Razor cohosting
# silently falls back to standalone Roslyn (no Razor). nuget.org serves the
# Roslyn .nupkg uncompressed, so that path is unaffected.
reqwest = { version = "0.12", default-features = false, features = ["rustls-tls", "gzip"] }
zip = { version = "2", default-features = false, features = ["deflate"] }
sha2 = "0.10"
flate2 = "1"
tar = "0.4"
# Locate node / typescript-language-server / npm on PATH.
which = "6"
# SSH/SFTP remote workspaces (issue #8). Pure-Rust crypto via `ring` instead of
# the default `aws-lc-rs`, which pulls aws-lc-sys and needs NASM to build on
# Windows — matching the project's openssl-free (rustls) stance.
russh = { version = "0.61", default-features = false, features = ["ring", "flate2", "rsa"] }
russh-sftp = "2.3.0"

# Win11 Snap Layouts on our frameless title bar (our own implementation in
# src/snap.rs). Same `windows` version tao already builds, so it's reused.
[target.'cfg(windows)'.dependencies]
windows = { version = "0.61", features = [
    "Win32_Foundation",
    "Win32_UI_WindowsAndMessaging",
    "Win32_UI_Shell",
    "Win32_UI_Input_KeyboardAndMouse",
] }

[profile.release]
panic = "abort"
codegen-units = 1
lto = true
opt-level = "s"
strip = true

# Build de DEV / validação local rápida — NÃO é o release de produção.
#
# O `profile.release` acima é otimizado para o BINÁRIO (LTO + codegen-units=1 +
# opt-level="s"): ótimo pro CI/instalador, mas é justamente o que faz a build
# levar minutos (LTO com 1 unidade serializa toda a compilação e o link). Para o
# CICLO DE DEV — editar Rust → `cargo build`/`tauri dev` → rodar — usamos o
# `profile.dev` abaixo, o mais rápido:
#   - opt-level = 1  → app fluido em runtime (dev puro = 0 fica lento) mantendo a
#                      compilação rápida; junto com o incremental, a rebuild do
#                      nosso crate cai para ~segundos-a-um-minuto (só o link pesa).
#   - incremental    → reaproveita artefatos entre builds.
#   - o passe caro (LTO/codegen-units=1/strip) fica SÓ no release de produção.
#
# (O E2E via tauri-driver usa o binário RELEASE, não este: o binário dev não
# pinta o WebView2 a tempo sob o driver. Ver tests/e2e/wdio.conf.ts.)
[profile.dev]
opt-level = 1
incremental = true

# Dependências de terceiros mudam raramente: compilá-las otimizadas uma vez torna
# o app fluido em runtime sem custar tempo nas rebuilds do NOSSO código (que
# continua em opt-level baixo). Só o nosso crate recompila no ciclo de dev.
[profile.dev.package."*"]
opt-level = 2
